Skills chart widget

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,14 @@
           <codersrank-activity username="marceljaworski" legend="false" labels tooltip step="5" ></codersrank-activity>
           
           <!-- Skills chart widget -->
+          <codersrank-skills-chart
+              username="marceljaworski"
+              labels
+              tooltip
+              skills="JavaScript,CSS,Less,Vue,Svelte,TypeScript,CSS,HTML"
+              svg-width="1120"
+              svg-height="400"
+            ></codersrank-skills-chart>
         </section>
         <section>
           <h2>Recent Projects</h2>
@@ -42,6 +50,7 @@
         </footer>
         <script src="https://unpkg.com/@codersrank/summary/codersrank-summary.min.js"></script>
         <script src="https://unpkg.com/@codersrank/activity/codersrank-activity.min.js"></script>
+        <script src="https://unpkg.com/@codersrank/skills-chart/codersrank-skills-chart.min.js"></script>
     </main>
     
 </body>
