--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,11 @@
           <h2>Recent Projects</h2>
     
           <!-- Portfolio widget -->
+          <codersrank-portfolio
+              username="marceljaworski"
+              grid
+              company="false"
+            ></codersrank-portfolio>
         </section>
         <section>
           <h2>Work Experience & Education</h2>
@@ -51,6 +56,7 @@
         <script src="https://unpkg.com/@codersrank/summary/codersrank-summary.min.js"></script>
         <script src="https://unpkg.com/@codersrank/activity/codersrank-activity.min.js"></script>
         <script src="https://unpkg.com/@codersrank/skills-chart/codersrank-skills-chart.min.js"></script>
+        <script src="https://unpkg.com/@codersrank/portfolio/codersrank-portfolio.min.js"></script>
     </main>
     
 </body>
