--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,43 @@
     <main>
         <header>
           <!-- Header content with avatar and basic info -->
+          <img src="i/avatar.jpg" alt="Avatar" class="avatar">
+      <div class="header-content">
+        <h1>Hi 🖐<br />My name is Marcel Jaworski</h1>
+        <div class="subtitle">
+          UX/UI <span class="dot">•</span>
+          Junior - Full Stack Developer <span class="dot">•</span>
+          HTML | CSS | JavaScript | Node.js </Node><span class="dot">•</span>
+          Degree in Audiovisual Media, University of the Andes <span role="img" aria-label="Venezuela">🇻🇪</span>
+        </div>
+        <div class="contacts">
+          <a href="https://github.com/marceljaworski" target="_blank" rel="noopener noreferrer">
+            <span class="icon">
+              <img src="images/github-icon-1.svg" alt="GitHub" />
+            </span>
+            <span>GitHub</span>
+          </a>
+          <a href="https://profile.codersrank.io/user/marceljaworski" target="_blank" rel="noopener noreferrer">
+            <span class="icon">
+              <img src="images/codersrank-icon.svg" alt="CodersRank" />
+            </span>
+            <span>CodersRank</span>
+          </a>
+          <a href="https://www.youtube.com/c/MarcelJaworskiCinematography" target="_blank" rel="noopener noreferrer">
+            <span class="icon">
+              <img src="images/youtube-icon.svg" alt="Youtube" />
+            </span>
+            <span>Youtube</span>
+          </a>
+          <a href="https://www.instagram.com/marcel.jaworski/?hl=es" target="_blank" rel="noopener noreferrer">
+            <span class="icon">
+              <img src="images/instagram-2016-5.svg" alt="Instagram" />
+            </span>
+            <span>Instagram</span>
+          </a>
+        </div>
+      </div>
+      </div>
         </header>
         <section>
           <h2>My Coding Activity & Stats</h2>
