--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,11 @@
     <main>
         <header>
           <!-- Header content with avatar and basic info -->
-          <img src="i/avatar.jpg" alt="Avatar" class="avatar">
+          <img src="images/profil-bild.jpg" alt="Avatar" class="avatar">
       <div class="header-content">
         <h1>Hi 🖐<br />My name is Marcel Jaworski</h1>
         <div class="subtitle">
-          UX/UI <span class="dot">•</span>
+          Photographer, video editor <span class="dot">•</span>
           Junior - Full Stack Developer <span class="dot">•</span>
           HTML | CSS | JavaScript | Node.js </Node><span class="dot">•</span>
           Degree in Audiovisual Media, University of the Andes <span role="img" aria-label="Venezuela">🇻🇪</span>
@@ -96,6 +96,7 @@
     
         <footer>
           <!-- Generic footer copy -->
+          Copyright © 2020 - 2023 Marcel Jaworski
         </footer>
         <script src="https://unpkg.com/@codersrank/summary/codersrank-summary.min.js"></script>
         <script src="https://unpkg.com/@codersrank/activity/codersrank-activity.min.js"></script>
