--- a/public/index.html
+++ b/public/index.html
@@ -16,15 +16,15 @@
       <div class="header-content">
         <h1>Hi 🖐<br />My name is Marcel Jaworski</h1>
         <div class="subtitle">
-          Photographer, video editor <span class="dot">•</span>
-          Junior - Full Stack Developer <span class="dot">•</span>
+          Full Stack Developer <span class="dot">•</span>
           HTML | CSS | JavaScript | Node.js </Node><span class="dot">•</span>
+          Photographer and Video Editor <span class="dot">•</span>
           Degree in Audiovisual Media, University of the Andes <span role="img" aria-label="Venezuela">🇻🇪</span>
         </div>
         <div class="contacts">
           <a href="https://github.com/marceljaworski" target="_blank" rel="noopener noreferrer">
             <span class="icon">
-              <img src="images/github-icon-1.svg" alt="GitHub" />
+              <img src="images/github-142-svgrepo-com.svg" alt="GitHub" />
             </span>
             <span>GitHub</span>
           </a>
@@ -51,7 +51,7 @@
       </div>
         </header>
         <section>
-          <h2>My Coding Activity & Stats</h2>
+          <h2>My Coding Activity & Statistics</h2>
     
           <!-- Summary widget -->
           <codersrank-summary username="marceljaworski" show-header="false"></codersrank-summary>
@@ -96,7 +96,7 @@
     
         <footer>
           <!-- Generic footer copy -->
-          Copyright © 2020 - 2023 Marcel Jaworski
+          Copyright © 2022 - 2023 Marcel Jaworski
         </footer>
         <script src="https://unpkg.com/@codersrank/summary/codersrank-summary.min.js"></script>
         <script src="https://unpkg.com/@codersrank/activity/codersrank-activity.min.js"></script>
