some text deleted

--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,12 @@
           <!-- Header content with avatar and basic info -->
           <img src="images/profil-bild.jpg" alt="Avatar" class="avatar">
       <div class="header-content">
-        <h1>Hi 🖐<br />My name is Marcel Jaworski</h1>
+        <h1>My name is Marcel Jaworski</h1>
         <div class="subtitle">
           Full Stack Developer <span class="dot">•</span>
           HTML | CSS | JavaScript | Node.js </Node><span class="dot">•</span>
           Photographer and Video Editor <span class="dot">•</span>
-          Degree in Audiovisual Media, University of the Andes <span role="img" aria-label="Venezuela">🇻🇪</span>
+          Degree in Audiovisual Media, University of the Andes.
         </div>
         <div class="contacts">
           <a href="https://github.com/marceljaworski" target="_blank" rel="noopener noreferrer">
